@@ -70,7 +70,11 @@ USER_BASE = None
 
 
 def makepath(*paths):
-    dir = os.path.abspath(os.path.join(*paths))
+    dir = os.path.join(*paths)
+    try:
+        dir = os.path.abspath(dir)
+    except OSError:
+        pass
     return dir, os.path.normcase(dir)
 
 
@@ -81,11 +85,11 @@ def abs_paths():
             continue   # don't mess with a PEP 302-supplied __file__
         try:
             m.__file__ = os.path.abspath(m.__file__)
-        except AttributeError:
+        except (AttributeError, OSError):
             pass
         try:
             m.__cached__ = os.path.abspath(m.__cached__)
-        except AttributeError:
+        except (AttributeError, OSError):
             pass
 
 
